Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 3.2k
    • Issues 3.2k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1k
    • Merge requests 1k
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • MesaMesa
  • mesamesa
  • Issues
  • #7735
Closed
Open
Issue created Nov 18, 2022 by Matteo Pacini@Zi0P4tch0

[RADV] Death Stranding: Director's Cut (Steam) freezes 6800XT (ring gfx_0.0.0 timeout)

Description

Death Stranding: Director's Cut freezes the GPU (and the system) when browsing the map, and switching between the system menu and the map itself. It can also freezing by just browsing around the game map.

Log files (for system lockups / game freezes / crashes)

[  581.258208] [drm:amdgpu_job_timedout [amdgpu]] *ERROR* ring gfx_0.0.0 timeout, signaled seq=299031, emitted seq=299033
[  581.258291] [drm:amdgpu_job_timedout [amdgpu]] *ERROR* Process information: process ds.exe pid 9640 thread ds.exe pid 9792
[  581.258352] amdgpu 0000:0a:00.0: amdgpu: GPU reset begin!
[  581.823600] amdgpu 0000:0a:00.0: [drm:amdgpu_ring_test_helper [amdgpu]] *ERROR* ring kiq_2.1.0 test failed (-110)
[  581.823656] [drm:gfx_v10_0_hw_fini [amdgpu]] *ERROR* KGQ disable failed
[  582.109406] [drm:gfx_v10_0_hw_fini [amdgpu]] *ERROR* failed to halt cp gfx
[  582.139958] [drm] free PSP TMR buffer
[  582.187742] amdgpu 0000:0a:00.0: amdgpu: MODE1 reset
[  582.187746] amdgpu 0000:0a:00.0: amdgpu: GPU mode1 reset
[  582.187813] amdgpu 0000:0a:00.0: amdgpu: GPU smu mode1 reset
[  582.696336] amdgpu 0000:0a:00.0: amdgpu: GPU reset succeeded, trying to resume
[  582.696518] [drm] PCIE GART of 512M enabled (table at 0x0000008000300000).
[  582.696538] [drm] VRAM is lost due to GPU reset!
[  582.696539] [drm] PSP is resuming...
[  582.776338] [drm] reserve 0xa00000 from 0x836b000000 for PSP TMR
[  582.825495] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.833578] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.841756] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.849937] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.858129] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.866313] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.874494] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.882682] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.890859] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.899049] [drm:amdgpu_cs_ioctl [amdgpu]] *ERROR* Failed to initialize parser -125!
[  582.914878] amdgpu 0000:0a:00.0: amdgpu: SECUREDISPLAY: securedisplay ta ucode is not available
[  582.914881] amdgpu 0000:0a:00.0: amdgpu: SMU is resuming...
[  582.914884] amdgpu 0000:0a:00.0: amdgpu: smu driver if version = 0x00000040, smu fw if version = 0x00000041, smu fw program = 0, version = 0x003a5400 (58.84.0)
[  582.914886] amdgpu 0000:0a:00.0: amdgpu: SMU driver if version not matched
[  582.914918] amdgpu 0000:0a:00.0: amdgpu: use vbios provided pptable
[  582.990761] amdgpu 0000:0a:00.0: amdgpu: SMU is resumed successfully!
[  582.992031] [drm] DMUB hardware initialized: version=0x02020013
[  583.179470] [drm] kiq ring mec 2 pipe 1 q 0
[  583.184939] [drm] VCN decode and encode initialized successfully(under DPG Mode).
[  583.185722] [drm] JPEG decode initialized successfully.
[  583.185744] amdgpu 0000:0a:00.0: amdgpu: ring gfx_0.0.0 uses VM inv eng 0 on hub 0
[  583.185746] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.0.0 uses VM inv eng 1 on hub 0
[  583.185746] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.1.0 uses VM inv eng 4 on hub 0
[  583.185747] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.2.0 uses VM inv eng 5 on hub 0
[  583.185748] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.3.0 uses VM inv eng 6 on hub 0
[  583.185748] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.0.1 uses VM inv eng 7 on hub 0
[  583.185749] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.1.1 uses VM inv eng 8 on hub 0
[  583.185749] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.2.1 uses VM inv eng 9 on hub 0
[  583.185750] amdgpu 0000:0a:00.0: amdgpu: ring comp_1.3.1 uses VM inv eng 10 on hub 0
[  583.185750] amdgpu 0000:0a:00.0: amdgpu: ring kiq_2.1.0 uses VM inv eng 11 on hub 0
[  583.185751] amdgpu 0000:0a:00.0: amdgpu: ring sdma0 uses VM inv eng 12 on hub 0
[  583.185751] amdgpu 0000:0a:00.0: amdgpu: ring sdma1 uses VM inv eng 13 on hub 0
[  583.185752] amdgpu 0000:0a:00.0: amdgpu: ring sdma2 uses VM inv eng 14 on hub 0
[  583.185752] amdgpu 0000:0a:00.0: amdgpu: ring sdma3 uses VM inv eng 15 on hub 0
[  583.185753] amdgpu 0000:0a:00.0: amdgpu: ring vcn_dec_0 uses VM inv eng 0 on hub 1
[  583.185754] amdgpu 0000:0a:00.0: amdgpu: ring vcn_enc_0.0 uses VM inv eng 1 on hub 1
[  583.185754] amdgpu 0000:0a:00.0: amdgpu: ring vcn_enc_0.1 uses VM inv eng 4 on hub 1
[  583.185755] amdgpu 0000:0a:00.0: amdgpu: ring vcn_dec_1 uses VM inv eng 5 on hub 1
[  583.185755] amdgpu 0000:0a:00.0: amdgpu: ring vcn_enc_1.0 uses VM inv eng 6 on hub 1
[  583.185756] amdgpu 0000:0a:00.0: amdgpu: ring vcn_enc_1.1 uses VM inv eng 7 on hub 1
[  583.185756] amdgpu 0000:0a:00.0: amdgpu: ring jpeg_dec uses VM inv eng 8 on hub 1
[  583.191871] amdgpu 0000:0a:00.0: amdgpu: recover vram bo from shadow start
[  583.191919] amdgpu 0000:0a:00.0: amdgpu: recover vram bo from shadow done
[  583.191920] [drm] Skip scheduling IBs!
[  583.191921] [drm] Skip scheduling IBs!
[  583.191933] [drm] Skip scheduling IBs!
[  583.191935] ------------[ cut here ]------------
[  583.191935] refcount_t: underflow; use-after-free.
[  583.191939] WARNING: CPU: 13 PID: 2975 at lib/refcount.c:28 refcount_warn_saturate+0xba/0x110
[  583.191943] amdgpu 0000:0a:00.0: amdgpu: GPU reset(2) succeeded!
[  583.191943] Modules linked in: fuse xt_MASQUERADE xt_addrtype iptable_nat amdgpu drm_ttm_helper ttm mfd_core gpu_sched drm_buddy snd_hda_codec_hdmi drm_display_helper kvm_amd btusb drm_kms_helper snd_hda_intel btintel kvm snd_intel_dspcfg snd_usb_audio bluetooth snd_hda_codec syscopyarea snd_usbmidi_lib irqbypass sysfillrect snd_hda_core sysimgblt snd_hwdep ecdh_generic fb_sys_fops snd_rawmidi ecc snd_pcm efivarfs igb
[  583.191957] CPU: 13 PID: 2975 Comm: gfx_0.0.0 Not tainted 6.0.9-gentoo-x86_64 #1
[  583.191959] Hardware name: System manufacturer System Product Name/ROG STRIX B450-F GAMING, BIOS 4901 07/25/2022
[  583.191960] RIP: 0010:refcount_warn_saturate+0xba/0x110
[  583.191962] Code: 01 01 e8 74 24 53 00 0f 0b c3 cc cc cc cc 80 3d 3f 88 4e 01 00 75 85 48 c7 c7 78 99 dd 87 c6 05 2f 88 4e 01 01 e8 51 24 53 00 <0f> 0b c3 cc cc cc cc 80 3d 1a 88 4e 01 00 0f 85 5e ff ff ff 48 c7
[  583.191964] RSP: 0018:ffffb7250142fea0 EFLAGS: 00010286
[  583.191965] RAX: 0000000000000000 RBX: ffffa21688a69608 RCX: 0000000000000000
[  583.191966] RDX: 0000000000000001 RSI: 0000000000000001 RDI: 00000000ffffffff
[  583.191967] RBP: ffffa216dc9734a8 R08: ffffffff8811e568 R09: 00000000ffffdfff
[  583.191968] R10: ffffffff8803e580 R11: ffffffff880ee580 R12: 0000000000000000
[  583.191968] R13: ffffa217b12f8600 R14: ffffa21688a69780 R15: ffffa217ccb29800
[  583.191969] FS:  0000000000000000(0000) GS:ffffa21d9ed40000(0000) knlGS:0000000000000000
[  583.191970] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[  583.191971] CR2: 000022f309131000 CR3: 000000017a3ee000 CR4: 0000000000750ee0
[  583.191972] PKRU: 55555554
[  583.191973] Call Trace:
[  583.191974]  <TASK>
[  583.191975]  drm_sched_main+0x65/0x410 [gpu_sched]
[  583.191979]  ? destroy_sched_domains_rcu+0x30/0x30
[  583.191982]  ? drm_sched_job_done.isra.0+0x150/0x150 [gpu_sched]
[  583.191984]  kthread+0xe3/0x110
[  583.191986]  ? kthread_complete_and_exit+0x20/0x20
[  583.191988]  ret_from_fork+0x22/0x30
[  583.191990]  </TASK>
[  583.191991] ---[ end trace 0000000000000000 ]---
[  583.191994] [drm] Skip scheduling IBs!
[  583.191998] [drm] Skip scheduling IBs!

Steps to reproduce

  1. Start a new game / load any game
  2. Open the map
  3. Browse around the map with mouse / joystick, and switch between the system menu and the map again. At some point the map will freeze.

System information

System:
  Host: Brightfalls Kernel: 6.0.9-gentoo-x86_64 arch: x86_64 bits: 64
    compiler: N/A Desktop: KDE Plasma v: 5.25.5 tk: Qt v: 5.15.5 wm: kwin_x11
    dm: SDDM Distro: Gentoo Base System release 2.9
CPU:
  Info: 8-core model: AMD Ryzen 7 5800X3D bits: 64 type: MT MCP arch: Zen 3
    rev: 2 cache: L1: 512 KiB L2: 4 MiB L3: 96 MiB
  Speed (MHz): avg: 2191 high: 2200 min/max: 2200/3400 boost: enabled
    cores: 1: 2200 2: 2200 3: 2185 4: 2177 5: 2198 6: 2200 7: 2188 8: 2190
    9: 2141 10: 2195 11: 2200 12: 2187 13: 2200 14: 2200 15: 2198 16: 2200
    bogomips: 108803
  Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
  Device-1: AMD Navi 21 [Radeon RX 6800/6800 XT / 6900 XT] vendor: ASUSTeK
    driver: amdgpu v: kernel arch: RDNA 2 pcie: speed: 16 GT/s lanes: 16 ports:
    active: DP-1,DP-2 empty: DP-3,HDMI-A-1 bus-ID: 0a:00.0 chip-ID: 1002:73bf
  Display: x11 server: X.org v: 1.21.1.4 with: Xwayland v: 22.1.3
    compositor: kwin_x11 driver: X: loaded: amdgpu gpu: amdgpu display-ID: :0
    screens: 1
  Screen-1: 0 s-res: 4000x2560
  Monitor-1: DP-1 mapped: DisplayPort-0 pos: primary,bottom-l
    model: ROG PG278QR res: 2560x1440 dpi: 109 diag: 686mm (27")
  Monitor-2: DP-2 mapped: DisplayPort-1 pos: top-right model: Dell U2719D
    res: 1440x2560 dpi: 109 diag: 685mm (27")
  OpenGL: renderer: AMD Radeon RX 6800 XT (navi21 LLVM 15.0.3 DRM 3.48
  6.0.9-gentoo-x86_64)
    v: 4.6 Mesa 22.2.2 direct render: Yes

If applicable

  • Xserver version: 1.21.1.4
  • DXVK version: --
  • Wine/Proton version: Tested on both Proton 7.0.1 and GE-Proton7-41

What I have tried

  • Disabling XMP - still hangs up
  • Lowering the game memory streaming - still hangs up
  • Disabling AMDGPU power manager - same result

Regression

Will try downgrading mesa and come back with more info.

Further information (optional)

Tested only on RADV

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking